Fixes fonts, text alignment

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -57,8 +57,13 @@
   float:right;
   width: 220px;
   margin-left: 20px;
+}
 
-
+.upload_box p{
+  margin-left: 5px;
+}
+.upload_title {
+  text-align: center;
 }
 
 .standard{
