--- a/app/assets/stylesheets/main_styles.css
+++ b/app/assets/stylesheets/main_styles.css
@@ -1,6 +1,7 @@
 body{
   background-color: #362C30;
   color: white;
+  font-family: Helvetica;
  }
 
 
@@ -38,5 +39,13 @@ img{
 a{
   text-decoration: none;
   color: white;
+}
+
+.most_recent h1{
+  text-align: center;
+}
+
+.photo_container h3{
+  text-align: center;
 }
 
